<resources>
    <string name="app_name">MY Project</string>
    <string name="enter_your_key">Enter Your Key??</string>
    <string name="input">Input</string>
    <string name="check_connection">Check Connection</string>
    <string name="screen_density">screen_density</string>
    <string name="filemanager">filemanager</string>
    <string name="click_here_to_find_screen_density">Click here to Find screen density</string>
    <string name="show_density_here">Show Density Here</string>

</resources>