
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="30dp"
        android:text="@string/enter_your_key"

        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="#FFE6E6"
        android:hint="@string/input"
        android:maxLength="15" />


    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="100dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="100dp"
        android:text="@string/check_connection"
        app:backgroundTint="#7E1212" />


    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="100dp"
        android:text="@string/screen_density"
        app:backgroundTint="#7E1212"
        />
    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"

        android:layout_marginEnd="100dp"
        android:text="@string/filemanager"
        app:backgroundTint="#7E1212"/>
</LinearLayout>